# illumin8

./: .gitignore  CMakeLists.txt  README.md  script.sh
cmake/: Catch2.cmake
include/Illumin8/: color.h  intersection.h  intersections.h  matrix.h  ray.h  shape.h  sphere.h  transformation.h  tuple.h
src/: main.cpp  test.cpp
src/core/: color.cpp  color.h  math.h  matrix.cpp  matrix.h  ray.cpp  ray.h  transformation.cpp  transformation.h  tuple.cpp  tuple.h
src/display/: canvas.cpp  canvas.h
src/helpers/: intersection.cpp  intersection.h  intersections.cpp  intersections.h
src/shapes/: sphere.cpp  sphere.h
tests/: CMakeLists.txt  test.cpp  tests_main.cpp
tests/core/: test_color.cpp  test_matrix.cpp  test_ray.cpp  test_transformation.cpp  test_tuple.cpp
tests/display/: test_canvas.cpp
tests/helpers/: test_intersection.cpp  test_intersections.cpp
tests/shapes/: test_sphere.cpp
